--- a/index2.html
+++ b/index2.html
@@ -11,5 +11,7 @@
     <div border="black">
         This is an division section , which is an block code text .
     </div>
+
+    <p>This is a new feature . Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, illo exercitationem. Excepturi facilis inventore impedit dignissimos numquam commodi sunt blanditiis pariatur, accusamus ut explicabo repellendus quaerat voluptas rem deserunt optio.</p>
 </body>
 </html>
