New paragraph inserted

--- a/index2.html
+++ b/index2.html
@@ -13,5 +13,7 @@
     </div>
 
     <p>This is a new feature . Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, illo exercitationem. Excepturi facilis inventore impedit dignissimos numquam commodi sunt blanditiis pariatur, accusamus ut explicabo repellendus quaerat voluptas rem deserunt optio.</p>
+  <hr>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, nam.</p>
 </body>
 </html>
