Add new feature

--- a/index2.html
+++ b/index2.html
@@ -15,5 +15,7 @@
     <p>This is a new feature . Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, illo exercitationem. Excepturi facilis inventore impedit dignissimos numquam commodi sunt blanditiis pariatur, accusamus ut explicabo repellendus quaerat voluptas rem deserunt optio.</p>
   <hr>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, nam.</p>
+
+  <h1> Only change in branch named feature1.</h1>
 </body>
 </html>
